fixed error when adding new accordion + fixed spacing of icon

--- a/src/block/accordion/editor.scss
+++ b/src/block/accordion/editor.scss
@@ -9,6 +9,9 @@
 		[data-type="stackable/icon"]:last-child .stk-block-icon {
 			justify-content: flex-end;
 		}
+		[data-type="stackable/icon"] {
+			flex: 0 0 40px;
+		}
 	}
 }
 
